@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.25 2009/09/28 07:20:37 martin Exp $
+# $Id: CHANGES,v 1.993.2.26 2009/09/28 07:26:51 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.4.5 (2009/??/??)
+ - (2009/09/28) Fixed bug#4341 - No HighlightColors configured fills up OTRS log
+   file with warnings.
  - (2009/09/28) Fixed bug#4328 - Incorrect charset in AgentTicketAttachment.
  - (2009/09/26) Fixed bug#4302 - Dashboard: Tickets Stats graph incorrect
    (permission related).
